@@ -14,39 +14,43 @@ import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.*;
 public class CounterServlet extends HttpServlet {
-    public void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+    public void doGet(HttpServletRequest req, HttpServletResponse resp)throws ServletException, IOException {
         //一个web应用程序只有一个上下文对象,该上下文对象可访问所有servlet
         ServletContext context = getServletContext();
         synchronized (context) {
-
             List<Map<String,String>> list = new ArrayList<>();
-
-            String logId = context.getAttribute("logId").toString(); //当前传进来的logId
-            list = (List) context.getAttribute("list");
-            Set<String> set = new HashSet<>();
-            for (int i=0;i<list.size();i++){
-                set.add(list.get(i).get("logId"));
+            String logId = req.getParameter("logId")==null? null:req.getParameter("logId");
+            list = (List<Map<String,String>>) context.getAttribute("list");
+            if (list==null){
+                list = new ArrayList<>();
             }
-            //若是没有logId就添加
-            if (!set.contains(logId)) {   //不包含为false
-                Map<String,String> map = new HashedMap();
-                map.put("logId",logId);
-                map.put("count","1");
-                list.add(map);
-            }
-            for (Map<String, String> map1 : list){
-                Integer count = 1;
-                if (logId.equals(map1.get("logId"))){
-                    count = Integer.valueOf(map1.get("count"));
-                    if (null == count) {
-                        count = new Integer(1);
-                    } else {
-                        count = new Integer(count.intValue() + 1);
+            if (list!=null && list.size()>0){
+                for (Map<String, String> map1 : list){
+                    Integer count = 1;
+                    if (logId.equals(map1.get("logId"))){
+                        count = Integer.valueOf(map1.get("count"));
+                        if (null == count) {
+                            count = new Integer(1);
+                        } else {
+                            count = new Integer(count.intValue() + 1);
+                        }
+                        map1.put("count",String.valueOf(count));
                     }
-                    map1.put("count",String.valueOf(count));
                 }
             }
+            Set<String> set = new HashSet<>();
+            for (int i=0;list!=null && i<list.size();i++){
+                set.add(list.get(i).get("logId"));
+            }
+            //若是没有logId就添加 或者不包含此次传进来的id就添加
+            if (!set.contains(logId)){
+                    Map<String,String> map = new HashedMap();
+                    map.put("logId",logId);
+                    map.put("count","1");
+                    list.add(map);
+            }
             context.setAttribute("list", list);
+            resp.sendRedirect("/crainnogao/detail?logId="+logId);
         }
     }
 }
